--- a/src/app/client-profile/client-profile.component.css
+++ b/src/app/client-profile/client-profile.component.css
@@ -7,7 +7,13 @@
 }
 .contentForm{
     width: 50%;
+    height: 90vh;
 }
 .warningText{
     margin-top: 2%;
+}
+.btnClose{
+    float: right;
+    margin-right: 5%;
+    margin-top: 1%;
 }
